Sorting functionality tests added; Database updated